@@ -1,1 +1,0 @@
-debian/reverse-dphys-config.1
